--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ categories = ["rendering"]
 log = "0.3"
 num-traits = "0.1"
 rand = "0.3"
-cgmath = "0.13"
+serde = "1.0"
+serde_derive = "1.0"
+cgmath = { version="0.14", features=["eders"] }
 bitflags = "0.7"
 image = "0.12"
 lazy_static = "0.2"
