--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ flame = {version="*", optional=true}
 env_logger = "0.4"
 clap = "2.24"
 serde_json = "1.0"
-flame = "*"
+flame = "0.1"
 
 [features]
 default = []
