--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ lazy_static = "0.2"
 copy_arena = "0.1"
 rayon = "0.7"
 tobj = "0.1"
-flame = {version="*", optional=true}
+flame = {version="0.1", optional=true}
 
 [dev-dependencies]
 env_logger = "0.4"
