--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bitflags = "0.7"
 image = "0.12"
 lazy_static = "0.2"
 copy_arena = "0.1"
+aren_alloc = "0.2"
 rayon = "0.7"
 tobj = "0.1"
 flame = {version="0.1", optional=true}
